--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,6 +2,14 @@ name: Docker
 
 on:
   push:
+
+    # exclude files or path for action trigger
+    path:
+      - 'README.md'
+      - 'build-postgres-10-ita.sh'
+      - 'postgres-run-dev.sh'
+      - 'postgres-run-prod.sh'
+
     # Publish `master` as Docker `latest` image.
     branches:
       - master
