fix exclude files in actions

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,10 +5,10 @@ on:
 
     # exclude files or path for action trigger
     path:
-      - 'README.md'
-      - 'build-postgres-10-ita.sh'
-      - 'postgres-run-dev.sh'
-      - 'postgres-run-prod.sh'
+      - "**/README.md"
+      - "**/build-postgres-10-ita.sh"
+      - "**/postgres-run-dev.sh"
+      - "**/postgres-run-prod.sh"
 
     # Publish `master` as Docker `latest` image.
     branches:
